added start view

--- a/wireframe.html
+++ b/wireframe.html
@@ -6,6 +6,11 @@
   <title>html wireframes</title>
 </head>
 <body>
+  <div class ="container">
+    <h2>US Geography Quiz</h2>
+    <img class = "image" src ="#" alt="Opening picture">
+    <button id="start">New Quiz</button>
+  </div>
   
 </body>
 </html>
