added question page

--- a/wireframe.html
+++ b/wireframe.html
@@ -6,11 +6,32 @@
   <title>html wireframes</title>
 </head>
 <body>
+
+  <!--- Start Page --->
   <div class ="container">
     <h2>US Geography Quiz</h2>
     <img class = "image" src ="#" alt="Opening picture">
     <button id="start">New Quiz</button>
   </div>
-  
+  <hr>
+
+  <!-- Question Page -->
+ <div class = "container">
+   <h2>What's the capital of Mississippi?</h2>
+   <form>
+      <input type="radio" id="a">
+      <label for="a">Jacksonville</label><br>
+      <input type="radio" id="b">
+      <label for="b">Jacksonville</label><br>
+      <input type="radio" id="c">
+      <label for="c">Jacksonville</label><br>
+      <input type="radio" id="d">
+      <label for="d">Jacksonville</label><br>
+
+   </form>
+
+
+ </div>
+
 </body>
 </html>
