--- a/wireframe.html
+++ b/wireframe.html
@@ -31,6 +31,20 @@
    </form>
 
 
+
+
+
+
+
+
+
+   <!-- End Page -->
+   <hr>
+   <div class = "container">
+     <h2>End of Game</h2>
+     <h3>Final Score</h3>
+     <button id="new game">New Game</button>
+
  </div>
 
 </body>
