Added Right and Wrong Page

--- a/wireframe.html
+++ b/wireframe.html
@@ -27,11 +27,33 @@
       <label for="c">Jacksonville</label><br>
       <input type="radio" id="d">
       <label for="d">Jacksonville</label><br>
-
    </form>
-
-
  </div>
-
+ <hr>
+ <!--Right or Wrong Page-->
+ <div class= "container">
+  <h2>Correct!</h2>
+  <img class = "image" src = "#" alt = "star">
+  <h3>Score:</h3>
+  <ul>
+      <li>Right : 0</li>
+      <li>Wrong : 0</li>
+  </ul>
+  <button id= "next">Next</button>
+</div>
+<hr>
+<div class= "container">
+  <h2>Wrong!</h2>
+  <img class = "image" src = "#" alt = "star">
+  <h3>Right Answer:</h3>
+  <p>the right answer is...</p>
+  <h4>Score:</h4>
+  <ul>
+      <li>Right : 0</li>
+      <li>Wrong : 0</li>
+  </ul>
+  <button id= "next">Next</button>
+</div>
+<hr>
 </body>
 </html>
