Add Right and Wrong Page

--- a/wireframe.html
+++ b/wireframe.html
@@ -30,7 +30,8 @@
    </form>
  </div>
  <hr>
- <!--Right or Wrong Page-->
+
+ <!--Right Page-->
  <div class= "container">
   <h2>Correct!</h2>
   <img class = "image" src = "#" alt = "star">
@@ -41,10 +42,11 @@
   </ul>
   <button id= "next">Next</button>
 </div>
+<!--Wrong Page-->
 <hr>
 <div class= "container">
   <h2>Wrong!</h2>
-  <img class = "image" src = "#" alt = "star">
+  <img class = "image" src = "#" alt = "thumb down">
   <h3>Right Answer:</h3>
   <p>the right answer is...</p>
   <h4>Score:</h4>
