--- a/wireframe.html
+++ b/wireframe.html
@@ -43,6 +43,8 @@
    <div class = "container">
      <h2>End of Game</h2>
      <h3>Final Score</h3>
+     <h4>Correct:</h4>
+     <h4>Incorrect:</h4>
      <button id="new game">New Game</button>
 
  </div>
