--- a/wireframe.html
+++ b/wireframe.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>html wireframes</title>
+  <link href="app.css" rel="stylesheet">
 </head>
 <body>
 
@@ -68,8 +69,6 @@
   <button id="new game">New Game</button>
 
 </div>
- <hr>
-
-
+<hr>
 </body>
 </html>
