--- a/index.html
+++ b/index.html
@@ -8,16 +8,24 @@
   <title>Quiz App</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet"
     type="text/css" />
-  <link href="app.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
+    <link href="app.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
   <header>
-    <h1>The name of your quiz</h1>
+    <h1>USA Geography Quiz</h1>
   </header>
-  <main></main>
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.js" crossorigin="anonymous"></script>
+  <main class= "main">
+    <div class="container">
+        <h2 class= "title">USA Geography Quiz</h2>
+        <br>
+        <br>
+        <button id="start">New Quiz</button>
+    </div>
+    <img class="background" src="./photos/map-of-usa.jpg" alt="map of USA">
+  </main>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.js"></script>
   <script src="app.js"></script>
 </body>
-
 </html>
