--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <h1>USA Geography Quiz</h1>
 
   </header>
-
+  <img class="background" src="./photos/map-of-usa.jpg" alt="map of usa">
   <main>
-  <div class="container"></div>
+  <div class="container">
+  </div>
   </main>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.js" crossorigin="anonymous"></script>
