--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>USA Geography Quiz</h1>
 
   </header>
-  <img class="background" src="./photos/map-of-usa-edit.jpg" alt="map of usa">
+  <!-- <img class="background" src="./photos/map-of-usa-edit.jpg" alt="map of usa"> -->
   <main>
   <div class="container">
   </div>
